[gd_scene load_steps=3 format=3 uid="uid://dumyj4mxjmng5"]

[ext_resource type="Script" uid="uid://b36peq6tvus3d" path="res://scenes/Menus/Pause/pause_menu.gd" id="1_0q7og"]
[ext_resource type="PackedScene" uid="uid://fcihoj66ahhi" path="res://scenes/Menus/Options/options_menu.tscn" id="2_qm14d"]

[node name="PauseMenu" type="Control"]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -14.0
offset_right = -14.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0q7og")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Unpause" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Unpause"

[node name="OptionsMenu" parent="." instance=ExtResource("2_qm14d")]
visible = false
layout_mode = 1

[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Unpause" to="." method="_on_unpause_pressed"]
